# pfsense-backups

./: .env.example  .gitignore  Dockerfile  README  README.md  alembic.ini  compose.prod.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
alembic/: env.py
alembic/versions/: 20260417_1930_0505c45d3d89_0_1_0_initial_schema.py  20260418_2200_add_backup_tag_note.py  20260418_2330_global_timezone.py  20260418_2345_notification_kinds.py  20260419_0100_backup_all_workers.py  20260419_0200_backup_contents.py  20260421_0100_backup_diff_table.py  20260421_0200_anchor_event_table.py  20260421_0300_nat_key_format_reset.py  20260422_0100_filter_key_format_reset.py  20260515_1200_backup_instance_started_index.py  20260612_0100_backup_config_version.py  20260612_0200_instance_staleness.py  20260612_0300_gfs_retention.py  20260612_0400_api_tokens.py  20260612_0500_replication.py
config/: config.yaml.example
docker/: web.Dockerfile  worker.Dockerfile
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  parsedTypes.ts  queries.ts  types.ts  ws.ts
frontend/src/components/: BackupOverridesDialog.tsx  CardGroupContext.tsx  EventFeed.tsx  Layout.tsx  MonacoDiff.tsx  MonacoViewer.tsx  ParsedBackupDiff.tsx  ParsedBackupView.tsx
frontend/src/components/cron/: CronBuilderModal.tsx  CronEditor.tsx  ScheduleForm.tsx
frontend/src/components/nav/: BackPill.tsx  ReturnToBackupPill.tsx
frontend/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  ConfirmDialog.tsx  Dialog.tsx  DropdownMenu.tsx  EmptyState.tsx  ExpandCollapseAll.tsx  FilterBar.tsx  FilterContext.tsx  FilterHiddenAnchorBanner.tsx  Input.tsx  Kbd.tsx  Label.tsx  QueryError.tsx  Select.tsx  Skeleton.tsx  SplitButton.tsx  Switch.tsx  Tabs.tsx  Toast.tsx  Tooltip.tsx  Xref.tsx  form.tsx
frontend/src/components/view/: RawXmlPanel.tsx  primitives.tsx
frontend/src/components/xref/: AnchorBlame.tsx  AnchorHistoryDrawer.tsx  DeepLinkBridge.tsx  QuickJump.tsx  XrefBackPill.tsx  XrefContext.tsx  XrefHistory.tsx
frontend/src/lib/: anchorLabel.ts  changedAnchors.ts  datetime.ts  errors.ts  filter.ts  formatRelative.ts  ifaceColor.ts  monacoInit.ts  sectionGroup.ts  timezones.ts  useActiveSection.ts  useBlameHotkey.ts  useDebouncedValue.ts  useFocusedAnchor.ts  useMediaQuery.ts  xref.ts
frontend/src/pages/: Audit.tsx  BackupDiff.tsx  BackupView.tsx  Backups.tsx  Dashboard.tsx  InstanceChanges.tsx  InstanceDetail.tsx  InstanceHistory.tsx  Instances.tsx  Login.tsx  Logs.tsx  Notifications.tsx  Schedule.tsx  Search.tsx  Settings.tsx
pfsense_shared/: __init__.py  anchor_events.py  backup_diff_storage.py  crypto.py  db.py  log_buffer.py  models.py  paths.py  pfsense_anchor_values.py  pfsense_crypto.py  pfsense_diff.py  pfsense_labels.py  pfsense_parser.py  pfsense_positions.py  pfsense_probe.py  pfsense_redact.py  retention.py  schemas.py  settings.py
pfsense_shared/pfsense_packages/: __init__.py  acme.py  avahi.py  freeradius.py  frr.py  haproxy.py  miniupnpd.py  openvpn_export.py  pfblockerng.py  shellcmd.py  snort.py  squid.py  suricata.py  telegraf.py  wireguard.py  zabbix.py
pfsense_shared/pfsense_sections/: __init__.py  _helpers.py  _x509.py  aliases.py  apikeys.py  auth.py  cron.py  dyndns.py  extra_vpn.py  firewall.py  ha.py  interfaces.py  layer2.py  misc.py  nat.py  notifications.py  packages.py  pki.py  revision.py  routing.py  services.py  services_extra.py  ssh.py  sysctl.py  system.py  vpn.py
scripts/: check_refkind_sync.py  github-mailmap.txt.example  push-github.sh
src/: backup_manager.py  prometheus_metrics.py
tests/: test_refkind_sync.py
tests/pfsense_shared/: test_anchor_events.py  test_crypto_rotation.py  test_layer2_and_ha.py  test_packages.py  test_pfsense_diff.py  test_pfsense_parser.py  test_retention.py  test_services_extra.py  test_v012_packages.py  test_v012_sections.py  test_v014_sections.py  test_v016_subpackages.py  test_v017_packages.py  test_v022_positions.py  test_v024_anchor_values.py  test_v042_parser_sweep.py  test_v043_package_deepfields.py  test_vpn_pki.py  test_x509.py
tests/pfsense_shared/fixtures/: sample_cert_b64.txt  sample_config_v0_11_0.xml
tests/web/: conftest.py  test_anchor_event_endpoints.py  test_anchor_history.py  test_anchor_history_cache.py  test_api_tokens.py  test_backup_diff.py  test_backups_history.py  test_backups_parsed.py  test_pool_release.py  test_replication_settings.py  test_response_hardening.py  test_search.py
tests/worker/: test_backfill_config_versions.py  test_change_notifications.py  test_cross_process_lock.py  test_gfs_cleanup.py  test_ingestion_anchor_events.py  test_instance_locks.py  test_ipc_dispatch_failures.py  test_key_rotation_cli.py  test_reindex_anchor_events.py  test_replication.py  test_staleness.py
web/: __init__.py  __main__.py  app.py  dependencies.py  middleware.py  static_spa.py
web/routers/: audit.py  auth.py  backups.py  events.py  health.py  instances.py  jobs.py  logs.py  notifications.py  schedule.py  search.py  settings_router.py  tokens.py
web/services/: audit.py  backup_storage.py  cron_utils.py  event_bus.py  ipc_client.py  log_ring.py  oidc.py  pfsense_preflight.py  rate_limit.py  token_auth.py
worker/: __init__.py  __main__.py  backup_manager.py  instance_locks.py  ipc_listener.py  ipc_publisher.py  notifier.py  prometheus_metrics.py  replication.py  scheduler.py  staleness.py
