[project]
name = "pfsense-backup"
version = "0.1.0"
description = "pfSense configuration backup + web dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # shared
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "cryptography>=41",
    "pyzmq>=25",
]

[project.optional-dependencies]
worker = [
    "requests>=2.31",
    "prometheus-client>=0.19",
    "apscheduler>=3.10",
    "croniter>=2.0",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "authlib>=1.3",
    "itsdangerous>=2.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "croniter>=2.0",
    "cron-descriptor>=1.4",
]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv]
# No build backend — this project is run from source inside containers, not
# installed as a wheel. uv handles venvs and dependency resolution directly.
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# prometheus_metrics.py carries long Prometheus label chains that are clearer
# on one line than wrapped; this file is lifted from the original src/ layout.
"worker/prometheus_metrics.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
