[project]
name = "pfsense-backups"
version = "0.28.0"
description = "pfSense configuration backup + web dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # shared
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "cryptography>=41",
    "pyzmq>=25",
    "alembic>=1.13",
    "defusedxml>=0.7",
    # lxml — used ONLY by pfsense_shared/pfsense_positions to track
    # source-line numbers of XML elements (``.sourceline``). stdlib
    # xml.etree doesn't expose that. We keep the main parser on
    # xml.etree to avoid churn; lxml is a targeted add for the
    # Structured↔Raw XML field-level sync feature.
    "lxml>=5.0",
]

[project.optional-dependencies]
worker = [
    "requests>=2.31",
    "prometheus-client>=0.19",
    # Cap below 4.x — APScheduler 4 is an async-first rewrite with
    # renamed APIs; our worker uses the synchronous 3.x ``BlockingScheduler``
    # pattern. Without the cap, a future ``uv lock`` regeneration could
    # resolve to 4.x and fail to boot.
    "apscheduler>=3.10,<4",
    "croniter>=2.0",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "pyjwt[crypto]>=2.8",
    "itsdangerous>=2.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "croniter>=2.0",
    "cron-descriptor>=1.4",
    "aiosqlite>=0.20",
    "slowapi>=0.1.9",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv]
# No build backend — this project is run from source inside containers, not
# installed as a wheel. uv handles venvs and dependency resolution directly.
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# prometheus_metrics.py carries long Prometheus label chains that are clearer
# on one line than wrapped; this file is lifted from the original src/ layout.
"worker/prometheus_metrics.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# Run async test functions as asyncio coroutines without requiring a
# decorator on every test. Individual test files can still override via
# @pytest.mark.asyncio(scope=...) if they need a different scope.
asyncio_mode = "auto"
